<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EAE2D8" >

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/anchor"
        android:layout_alignParentRight="true"
        android:layout_marginTop="105dp"
        android:layout_toStartOf="@id/anchor"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/usernameField"
        android:layout_toEndOf="@id/anchor"
        android:paddingTop="5dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="onPress"
        android:text="@string/login_button"
        style="@style/button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#2091BD"
        android:textSize="48sp" />

</RelativeLayout>