<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PayActivity" >
    
     <View
        android:id="@+id/anchor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_alignRight="@id/anchor2"
         android:layout_centerVertical="true" >

     </ListView>

     <Button
         android:id="@+id/button_submit"
         android:onClick="onPressSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/listView1"
         android:layout_marginBottom="36dp"
         android:layout_marginLeft="201dp"
         android:layout_toRightOf="@+id/listView1"
         android:text="@string/submit_button_text" />

     <TextView
         android:id="@+id/orderTotalLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button_submit"
         android:layout_alignTop="@+id/listView1"
         android:layout_marginTop="66dp"
         android:textSize="26sp"
         android:text="@string/order_total_label" />

     <TextView
         android:id="@+id/orderTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/orderTotalLabel"
         android:layout_below="@+id/orderTotalLabel"
         android:layout_marginTop="39dp"
         android:textSize="48sp"
         android:text="@string/defaultOrderTotal" />
     
</RelativeLayout>
