<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubmitActivity" >
    
     <View
        android:id="@+id/anchor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

     <ListView
         android:id="@+id/listView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/button_submit"
         android:layout_alignLeft="@+id/anchor2"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="@+id/button_submit"
         android:layout_below="@+id/textView1" >

     </ListView>

     <ExpandableListView
         android:id="@+id/summary_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/anchor2"
         android:layout_below="@+id/textView1" >

     </ExpandableListView>

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/summary_view"
         android:layout_marginRight="196dp"
         android:text="@string/bill_summary_text" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button_submit"
         android:layout_alignParentTop="true"
         android:text="@string/bill_totals_text" />

     <Button
         android:id="@+id/button_submit"
         android:onClick="onPressSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/listView2"
         android:layout_marginRight="168dp"
         android:text="@string/submit_button_text" />
     
</RelativeLayout>
